--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 
 jar {
     version = 1.0
-    mainClassName= 'erp.Erp'
+    mainClassName= 'erp.ErpMain'
     baseName= 'Erp'
     appendix = 'bin'
     
