--- a/.dbeaver/credentials-config.json
+++ b/.dbeaver/credentials-config.json
@@ -1,1 +1,1 @@
-1¤¨ ;ΣNέ:¬Qα²?fΙπσΟ οβ ηΰrOFI’)ΊT	΅ήγ«=s‹‰•χ>ÿΉw«ΜΛykΠΒ"ψYζ‰7Η$;Y΅α–b	y–‡&‚ΞUΘόG³ύlÿΧ-`Ά]{ –—°7ξ‰IπλJΑK¶‰ϊήKψ
+fφ°Ο―Χ(1•²N.ƒ•KυσΉρÿζφ‚”αJoΒηVΔ/J1ZO§IY$~Έÿδ ϋt΄ΚΧΠΠ£*£d’ ”ξψ«pμ#NRονcΓοβi6Τ‡I@K`:±ΆΘ™©ι™“π3ωμ/}³-<ψ-oϋ
